--- a/uticonew/index-4.html
+++ b/uticonew/index-4.html
@@ -128,45 +128,45 @@
                                         </ul>
                                     </li>
 
-                                    <li class="nav-item"><a href="about.html" class="nav-link">About Us <i class="flaticon-down-arrow"></i></a>
+                                    <li class="nav-item"><a href="" class="nav-link">About Us <i class="flaticon-down-arrow"></i></a>
                                         <ul class="dropdown-menu">
-                                            <li class="nav-item"><a href="home-insurance.html" class="nav-link">History</a></li>
+                                            <li class="nav-item"><a href="" class="nav-link">History</a></li>
 
-                                            <li class="nav-item"><a href="business-insurance.html" class="nav-link">Vision & Mission</a></li>
+                                            <li class="nav-item"><a href="" class="nav-link">Vision & Mission</a></li>
 
-                                            <li class="nav-item"><a href="health-insurance.html" class="nav-link">Corporate Policy</a></li>
+                                            <li class="nav-item"><a href="" class="nav-link">Corporate Policy</a></li>
 
-                                            <li class="nav-item"><a href="travel-insurance.html" class="nav-link">Investments</a></li>
+                                            <li class="nav-item"><a href="" class="nav-link">Investments</a></li>
 
-                                            <li class="nav-item"><a href="car-insurance.html" class="nav-link">CSR</a></li>
+                                            <li class="nav-item"><a href="" class="nav-link">CSR</a></li>
 
-                                            <li class="nav-item"><a href="life-insurance.html" class="nav-link">QSHE</a></li>
+                                            <li class="nav-item"><a href="" class="nav-link">QSHE</a></li>
 
-                                            <li class="nav-item"><a href="car-insurance.html" class="nav-link">ISO Certification</a></li>
+                                            <li class="nav-item"><a href="" class="nav-link">ISO Certification</a></li>
 
-                                            <li class="nav-item"><a href="life-insurance.html" class="nav-link">Awards</a></li>
+                                            <li class="nav-item"><a href="" class="nav-link">Awards</a></li>
                                         </ul>
                                     </li>
 
                                     <li class="nav-item"><a href="#" class="nav-link">Service <i class="flaticon-down-arrow"></i></a>
                                         <ul class="dropdown-menu">
-                                            <li class="nav-item"><a href="home-insurance.html" class="nav-link">Water</a></li>
+                                            <li class="nav-item"><a href="" class="nav-link">Water</a></li>
 
-                                            <li class="nav-item"><a href="business-insurance.html" class="nav-link">Power</a></li>
+                                            <li class="nav-item"><a href="" class="nav-link">Power</a></li>
 
-                                            <li class="nav-item"><a href="health-insurance.html" class="nav-link">Utico Trading</a></li>
+                                            <li class="nav-item"><a href="" class="nav-link">Utico Trading</a></li>
 
-                                            <li class="nav-item"><a href="travel-insurance.html" class="nav-link">EPC</a></li>
+                                            <li class="nav-item"><a href="" class="nav-link">EPC</a></li>
 
-                                            <li class="nav-item"><a href="car-insurance.html" class="nav-link">Engineering Services</a></li>
+                                            <li class="nav-item"><a href="" class="nav-link">Engineering Services</a></li>
 
-                                            <li class="nav-item"><a href="life-insurance.html" class="nav-link">Solar Free</a></li>
+                                            <li class="nav-item"><a href="" class="nav-link">Solar Free</a></li>
                                         </ul>
                                     </li>
 
                                     <li class="nav-item"><a href="#" class="nav-link">Projects <i class="flaticon-down-arrow"></i></a>
                                         <ul class="dropdown-menu">
-                                            <li class="nav-item"><a href="team.html" class="nav-link">Achievements</a></li>
+                                            <li class="nav-item"><a href="" class="nav-link">Achievements</a></li>
 
                                             <li class="nav-item"><a href="#" class="nav-link">Project Portfolio</a>
                                                 <!-- <ul class="dropdown-menu">
@@ -204,17 +204,17 @@
 
                                     <li class="nav-item"><a href="#" class="nav-link">Partners <i class="flaticon-down-arrow"></i></a>
                                         <ul class="dropdown-menu">
-                                            <li class="nav-item"><a href="blog-1.html" class="nav-link">Valued Partners</a></li>
+                                            <li class="nav-item"><a href="" class="nav-link">Valued Partners</a></li>
 
-                                            <li class="nav-item"><a href="blog-2.html" class="nav-link">Clients</a></li>
+                                            <li class="nav-item"><a href="" class="nav-link">Clients</a></li>
 
-                                            <li class="nav-item"><a href="single-blog.html" class="nav-link">Consultants</a></li>
+                                            <li class="nav-item"><a href="" class="nav-link">Consultants</a></li>
 
-                                            <li class="nav-item"><a href="single-blog.html" class="nav-link">Uticonsults</a></li>
+                                            <li class="nav-item"><a href="" class="nav-link">Uticonsults</a></li>
                                         </ul>
                                     </li>
 
-                                    <li class="nav-item"><a href="contact.html" class="nav-link">Contact Us</a></li>
+                                    <li class="nav-item"><a href="" class="nav-link">Contact Us</a></li>
                                 </ul>
 
                                 <div class="others-option">
