--- a/testindex.html
+++ b/testindex.html
@@ -942,20 +942,20 @@
                 </div>
             </div>
         </section> -->
-        <section style="background-color: #f4f4f4;">
+        <section style="background-color: #f4f4f4;margin-top: -2.5%;">
             <div class="gap">
                 <div class="container">
                     <div class="ceo-wrp">
-                        <div class="row">
+                        <div class="row" style="margin-top: 1%;">
                             <div class="col-md-7 col-sm-12 col-lg-7">
                                 <div class="ceo-msg-wrp">
                                     <div class="ceo-msg-inr">
-                                        <h2 itemprop="headline"><span class="thm-clr">WHO ARE WE</span><br> UTICO As Utility Experts</h2>
-                                        <p itemprop="description" style="font-weight: bold;">A renowned utility service provider through our valued associations and partners.<br></p>
-                                           <p  >Beyond the UAE, where Utico holds the title of being the largest full service private utility, the company also...</p>
+                                        <h2 itemprop="headline" style="font-size: 36px;font-weight: bold;font-family: 'Montserrat';"><span class="thm-clr">WHO ARE WE</span><br> UTICO As Utility Experts</h2>
+                                        <p itemprop="description" style="font-weight: bold;font-size: 19px;">A renowned utility service provider through our valued associations and partners.<br></p>
+                                           <p  style="font-size: 19px;">Beyond the UAE, where Utico holds the title of being the largest full service private utility, the company also...</p>
                                             
                                     </div>
-                                    <span class="exp-in" style="font-family: 'Montserrat';"><i>26</i> <span style="font-family: 'Montserrat';">Years Experience Working</span></span>
+                                    <span class="exp-in" style="font-family: 'Montserrat';"><i style="color:#086ad8">26</i> <span style="font-family: 'Montserrat';">Years Experience Working</span></span>
                                 </div>
                             </div>
                             <div class="col-md-5 col-sm-12 col-lg-5 slideInRight wow" data-wow-duration="1s" data-wow-delay=".2s">
@@ -1229,13 +1229,13 @@
                 </div>
             </div>
         </section> 
-        <section>
-            <div class="gap black-layer opc75">
+        <section style="margin-top: 1%;">
+            <div class="">
                 <div id="prtcl2" class="particle-bx"></div>
-                <div class="fixed-bg" style="background-image:url(assets/images/ss.jpg);"></div>
+                <div class="fixed-bg"></div>
                 <div class="container">
-                    <div class="sec-title text-center">
-                        <h2 itemprop="headline"style="font-family: 'Montserrat';">News</h2>
+                    <div class="sec-title text-left">
+                        <h2 itemprop="headline"style="font-family: 'Montserrat';margin-left: -5%; font-weight:bold">News</h2>
                         <span></span>
                     </div>
                     <div class="remove-ext5">
@@ -1282,7 +1282,7 @@
             </div>
         </section>
         
-        <section style="margin-top: -2%;">
+        <section style="margin-top: -6%;">
             <div id="frame" style="
             padding: 0% 0% 10% 0%;
             margin-top: 2%;
@@ -1482,8 +1482,8 @@
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/plugins.min.js"></script>
- <script src="assets/js/part-int.js"></script>
-    <script src="assets/js/part-int2.js"></script>
+ <!-- <script src="assets/js/part-int.js"></script>
+    <script src="assets/js/part-int2.js"></script> -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDcaOOcFcQ0hoTqANKZYz-0ii-J0aUoHjk"></script>
     <script src="assets/js/google-map-int.js"></script>
     <script src="assets/js/custom-scripts.js"></script>
