--- a/testindex.html
+++ b/testindex.html
@@ -1246,8 +1246,8 @@
                                         <span class="pst-dat" style="font-family: 'Montserrat';">21 March 2017</span>
                                         <a href="" title="" itemprop="url"><img src="assets/demo/b1.jpg" alt="pst-img1-1.jpg" itemprop="image"></a>
                                     </div>
-                                    <div class="">
-                                        <h4 itemprop="headline"><a href="" style="color: #fff;font-family: 'Montserrat';font-size: 19px;" title="" itemprop="url">Free Water for Sustainable Farming :</a></h4>
+                                    <div class="text-center">
+                                        <h4 itemprop="headline"><a href="" style="font-family: 'Montserrat';font-size: 16px;font-weight: bold;" title="" itemprop="url">Free Water for Sustainable Farming </a></h4>
                                         <p itemprop="description"><br><br></p>
                                     </div>
                                 </div>
@@ -1258,8 +1258,8 @@
                                         <span class="pst-dat" style="font-family: 'Montserrat';">26 May 2019</span>
                                         <a href="" title="" itemprop="url"><img src="assets/demo/b2.jpg" alt="pst-img1-2.jpg" itemprop="image"></a>
                                     </div>
-                                    <div class="">
-                                        <h4 itemprop="headline"><a href="" title="" style="color: #fff;font-family: 'Montserrat';font-size: 19px;" itemprop="url">Utico meets SIAS and PUB on Hyflux deal :</a></h4>
+                                    <div class="text-center">
+                                        <h4 itemprop="headline"><a href="" title="" style="font-family: 'Montserrat';font-size: 16px;font-weight: bold;" itemprop="url">Utico meets SIAS and PUB on Hyflux deal </a></h4>
                                         <p itemprop="description"><br><br></p>
                                     </div>
                                 </div>
@@ -1270,8 +1270,8 @@
                                         <span class="pst-dat" style="font-family: 'Montserrat';">12 May 2019</span>
                                         <a href="" title="" itemprop="url"><img src="assets/demo/b3.jpg" alt="pst-img1-3.jpg" itemprop="image"></a>
                                     </div>
-                                    <div class="">
-                                        <h4 itemprop="headline"><a href="" title="" style="color: #fff;font-family: 'Montserrat';font-size: 19px;" itemprop="url">Utico provides Hyflux binding agreement :</a></h4>
+                                    <div class="text-center">
+                                        <h4 itemprop="headline"><a href="" title="" style="font-family: 'Montserrat';font-size: 16px;font-weight: bold;" itemprop="url">Utico provides Hyflux binding agreement </a></h4>
                                         <p itemprop="description"><br><br></p>
                                     </div>
                                 </div>
