--- a/new1/index.html
+++ b/new1/index.html
@@ -603,8 +603,8 @@
         </div><!-- Responsive Header -->
         <section>
             <div id="rev_slider_4_1_wrapper" class="rev_slider_wrapper fullscreen-container" data-alias="notgeneric125"
-                data-source="gallery" style="background-color:transparent;padding:0px;">
-                <div id="rev_slider_4_1" class="rev_slider fullscreenbanner " style="display:none;height: 85% !important;" data-version="5.4.1">
+                data-source="gallery" style="background-color:transparent;padding:0px; height:600px!important;">
+                <div id="rev_slider_4_1" class="rev_slider fullscreenbanner " style="display:none;height: 100% !important;" data-version="5.4.1">
                     <ul>
                         <li data-index="rs-1" data-transition="none" data-slotamount="default" data-hideafterloop="0"
                             data-hideslideonmobile="off" data-title="Slide Title" data-easein="" data-easeout=""
