--- a/uticonew/index-4.html
+++ b/uticonew/index-4.html
@@ -47,7 +47,7 @@
         <!-- End Preloader -->
 
         <!-- Start Header Area -->
-        <header class="header-area header-style-four">
+        <header class="header-area header-style-four" ">
 
             <!-- Start Top Header -->
             <div class="top-header">
@@ -65,7 +65,7 @@
                             <div class="top-header-right-side">
                                 <ul>
                                     <li>
-                                        <div class="icon">
+                                        <div class="icon" style="background-color: #3dae2b!important;">
                                             <i class="flaticon-email"></i>
                                         </div>
                                         <span>Drop us an email:</span>
@@ -73,7 +73,7 @@
                                     </li>
 
                                     <li>
-                                        <div class="icon">
+                                        <div class="icon" style="background-color: #3dae2b!important;">
                                             <i class="flaticon-call"></i>
                                         </div>
                                         <span>Call us:</span>
@@ -81,7 +81,7 @@
                                     </li>
 
                                     <li>
-                                        <a href="#" class="default-btn">Get In Touch <span></span></a>
+                                        <a href="#" class="default-btn" style="background-color: #3dae2b!important;">Get In Touch <span></span></a>
                                     </li>
                                 </ul>
                             </div>
@@ -105,9 +105,9 @@
                     </div>
                 </div>
 
-                <div class="pearo-nav">
+                <div class="pearo-nav" >
                     <div class="container">
-                        <nav class="navbar navbar-expand-md navbar-light">
+                        <nav class="navbar navbar-expand-md navbar-light" style="background-color: #00c1de!important;">
                             <a class="navbar-brand" href="index-4.html">
                                 <img src="assets/img/utico1.png" alt="logo">
                             </a>
@@ -389,7 +389,7 @@
                             <p>A renowned utility service provider through our valued associations and partners.</p>
 
                             <!-- <p>Risus commodo viverra lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem sed do eiusmod tempor incididunt.</p> -->
-                            <a href="#" class="default-btn">Read More <span></span></a>
+                            <a href="#" class="default-btn" style="background-color: #3dae2b!important;">Read More <span></span></a>
                         </div>
                     </div>
                 </div>
@@ -787,7 +787,7 @@
         <!-- End Team Area -->
 
         <!-- Start Partner Area -->
-        <section class="partner-area bg-black-color">
+        <section class="partner-area" style="background-color: #00c1de;">
             <div class="container">
                 <div class="partner-slides owl-carousel owl-theme">
                     <div class="single-partner-item">
@@ -846,7 +846,7 @@
                                 <h3><a href="#">Free Water for Sustainable Farming :</a></h3>
                                 <p>From its earliest days as the Powers Regulator Company, Powers has been an innovator in the area of temperature control.</p>
 
-                                <a href="#" class="default-btn">Read More <span></span></a>
+                                <a href="#" class="default-btn" style="background-color: #3dae2b!important;">Read More <span></span></a>
                             </div>
                         </div>
                     </div>
@@ -864,7 +864,7 @@
                                 <p>From its earliest days as the Powers Regulator Company, Powers has been an innovator in the area of temperature control.</p>
                                 <!-- <p>Luis ipsum suspendisse ultrices. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p> -->
 
-                                <a href="#" class="default-btn">Read More <span></span></a>
+                                <a href="#" class="default-btn" style="background-color: #3dae2b!important;">Read More <span></span></a>
                             </div>
                         </div>
                     </div>
@@ -881,7 +881,7 @@
                                 <h3><a href="#">Utico provides Hyflux binding agreement :</a></h3>
                                 <!-- <p>Luis ipsum suspendisse ultrices. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p> -->
                                 <p>From its earliest days as the Powers Regulator Company, Powers has been an innovator in the area of temperature control.</p>
-                                <a href="#" class="default-btn">Read More <span></span></a>
+                                <a href="#" class="default-btn" style="background-color: #3dae2b!important;">Read More <span></span></a>
                             </div>
                         </div>
                     </div>
@@ -936,7 +936,7 @@
                                 <form class="newsletter-form" data-toggle="validator">
                                     <input type="email" class="input-newsletter" placeholder="Enter your email address" name="EMAIL" required autocomplete="off">
     
-                                    <button type="submit">Subscribe Now <i class="flaticon-right-chevron"></i></button>
+                                    <button type="submit" >Subscribe Now <i class="flaticon-right-chevron"></i></button>
                                     <div id="validator-newsletter" class="form-result"></div>
                                 </form>
                             </div>
