--- a/uticonew/index.html
+++ b/uticonew/index.html
@@ -315,7 +315,7 @@
 
         <!-- Start Main Banner Area -->
         <div class="home-area home-slides owl-carousel owl-theme">
-            <div class="main-banner item-bg1">
+            <div class="main-banner item-bg1" style="height: 720px !important;">
                 <div class="d-table">
                     <div class="d-table-cell">
                         <div class="container">
@@ -334,7 +334,7 @@
                 </div>
             </div>
 
-            <div class="main-banner item-bg2">
+            <div class="main-banner item-bg2" style="height: 720px !important;">
                 <div class="d-table">
                     <div class="d-table-cell">
                         <div class="container">
@@ -353,7 +353,7 @@
                 </div>
             </div>
 
-            <div class="main-banner item-bg3">
+            <div class="main-banner item-bg3" style="height: 720px !important;">
                 <div class="d-table">
                     <div class="d-table-cell">
                         <div class="container">
@@ -372,7 +372,7 @@
                 </div>
             </div>
 
-            <div class="main-banner item-bg4">
+            <div class="main-banner item-bg4" style="height: 720px !important;">
                 <div class="d-table">
                     <div class="d-table-cell">
                         <div class="container">
@@ -391,7 +391,7 @@
                 </div>
             </div>
 
-            <div class="main-banner item-bg5">
+            <div class="main-banner item-bg5" style="height: 720px !important;">
                 <div class="d-table">
                     <div class="d-table-cell">
                         <div class="container">
