--- a/new1/index.html
+++ b/new1/index.html
@@ -1004,8 +1004,8 @@
                                 <div class="ceo-msg-wrp">
                                     <div class="ceo-msg-inr">
                                         <h2 itemprop="headline" style="font-size: 25px;font-weight: 1000;font-family: 'Montserrat';"><span class="thm-clr">WHO ARE WE</span><br> UTICO As Utility Experts</h2>
-                                        <p itemprop="description" style="font-weight: bold;font-size: 16px;">A renowned utility service provider through our valued associations and partners.<br></p>
-                                           <p style="font-size: 16px;text-align: justify;color: #000;">Beyond the UAE, where Utico holds the title of being the largest full service private utility, the company also qualifies as a major full service utilities provider in the greater Middle East region. Utico is also one of the leading green companies in the UAE, as the first company to have obtained ISO 50001 certification for Energy management from Quality Austria.</p>
+                                        <p itemprop="description" style="font-weight: bold;font-size: 16px;color: #000;">A renowned utility service provider through our valued associations and partners.<br></p>
+                                           <p style="font-size: 16px;text-align: justify;color: #000;font-weight: bold;">Beyond the UAE, where Utico holds the title of being the largest full service private utility, the company also qualifies as a major full service utilities provider in the greater Middle East region. Utico is also one of the leading green companies in the UAE, as the first company to have obtained ISO 50001 certification for Energy management from Quality Austria.</p>
                                             
                                     </div>
                                     <span class="exp-in" style="font-family: 'Montserrat';"><i style="color:#00c1de">26</i> <span style="font-family: 'Montserrat';    font-weight: 1000;">Years Experience Working</span></span>
@@ -1190,10 +1190,10 @@
                     <!-- <span>Quickly unleash cross</span> -->
                     <h3 style="color: black; font-size: 37px; font-weight: bold;margin-left: -87%;font-family: 'Montserrat';" >Services</h3>
                 </div>
-                <div class="prtfl-fltrs-wrp text-center">
-                    <div class="fltr-dta remove-ext5">
-                        <div class="row masonry mrg40">
-                            <div class="col-md-3 col-sm-6 col-lg-3 fltr-itm fltr-itm1 slideInUp wow" data-wow-duration="" data-wow-delay="">
+                <div class="prtfl-fltrs-wrp text-center justify-content-center">
+                    <div class="fltr-dta remove-ext5 justify-content-center">
+                        <div class="row masonry mrg40 justify-content-center">
+                            <div class="col-md-3 col-sm-6 col-lg-4 fltr-itm fltr-itm1 slideInUp wow" data-wow-duration="" data-wow-delay="">
                                 <div class="prtfl-box2 style2">
                                     <div class=container style="position: relative;
                                     text-align: center;
@@ -1214,7 +1214,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-3 col-sm-6 col-lg-3 fltr-itm fltr-itm2 slideInUp wow" data-wow-duration="" data-wow-delay="">
+                            <div class="col-md-3 col-sm-6 col-lg-4 fltr-itm fltr-itm2 slideInUp wow" data-wow-duration="" data-wow-delay="">
                                 <div class="prtfl-box2 style2">
                                     <div class=container style="position: relative;
                                     text-align: center;
@@ -1235,7 +1235,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-3 col-sm-6 col-lg-3 fltr-itm fltr-itm3 slideInUp wow" data-wow-duration="" data-wow-delay="">
+                            <div class="col-md-3 col-sm-6 col-lg-4 fltr-itm fltr-itm3 slideInUp wow" data-wow-duration="" data-wow-delay="">
                                 <div class="prtfl-box2 style2">
                                     <div class=container style="position: relative;
                                     text-align: center;
@@ -1256,7 +1256,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-3 col-sm-6 col-lg-3 fltr-itm fltr-itm4 slideInUp wow" data-wow-duration="" data-wow-delay="">
+                            <div class="col-md-3 col-sm-6 col-lg-4 fltr-itm fltr-itm4 slideInUp wow" style="margin-left: 17%;" data-wow-duration="" data-wow-delay="">
                                  <div class="prtfl-box2 style2">
                                     <div class=container style="position: relative;
                                     text-align: center;
@@ -1277,7 +1277,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-3 col-sm-6 col-lg-3 fltr-itm fltr-itm4 slideInUp wow" data-wow-duration="" data-wow-delay="">
+                            <div class="col-md-3 col-sm-6 col-lg-4 fltr-itm fltr-itm4 slideInUp wow" data-wow-duration="" data-wow-delay="">
                                 <div class="prtfl-box2 style2">
                                     <div class=container style="position: relative;
                                                                 text-align: center;
